<resources>
    <string name="app_name">Registeration_System</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_student">Student Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_fragment_student">Student Control</string>
    <string name="title_activity_add_teacher">Add Teacher</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_course">ADD SUBJECTS</string>
    <string name="logout_btn">LOGOUT</string>
    <string name="student_pro">Student Profile</string>
    <string name="add_subject">ADD SUBJECT</string>
    <string name="add_some_subject">Our Subjects</string>
    <string name="save_subject">Save Subject</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Password">Password</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="teacher_email">Teacher Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="select_subject">Select subject</string>
    <string name="assign_subject">Assign Subject</string>
    <string name="not_registerd">Not Registerd ?</string>
    <string name="select_course">Select Course</string>
    <string name="logout">Logout</string>
    <string name="add_subjects">ADD SUBJECTS</string>
    <string name="student_fragment">Student Control</string>
    <string name="activity_student">Press and hold the subject to update it </string>
    <string name="add_student">Add Student</string>
    <string name="update_student">Update Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="subject_fragment">Subject Fragment</string>
    <string name="assign_subject_to_teacher">Assign Subject To Teacher</string>
    <string name="delete_subject">Delete Subject</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="update_teacher">Update Teacher</string>
    <string name="delete_teacher">Delete Teacher</string>
    <string name="list_teachers">List teachers</string>
    <string name="registeration_system">Registeration System</string>
    <string name="teacher_fragment">teacher fragment</string>
    <string name="list_teachers_with_thier_courses">List Teachers With Thier Courses</string>
</resources>
