<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Student_Courses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.funky.registeration_system.StudentActivity">

    <Button
        android:id="@+id/add_course"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="?attr/colorPrimaryDark"
        android:text="@string/add_subjects"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/add_course" />

    <Button
        android:id="@+id/logout_ID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="?attr/actionModeSplitBackground"
        android:text="@string/logout_btn"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_course" />

    <TextView
        android:id="@+id/updateText"
        android:layout_width="242dp"
        android:layout_height="22dp"
        android:text="@string/activity_student"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/StudentSubjects" />

    <ListView
        android:id="@+id/StudentSubjects"
        android:layout_width="368dp"
        android:layout_height="322dp"
        android:layout_marginEnd="8dp"
        android:longClickable="true"
        android:padding="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/add_course"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
