<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="com.example.funky.registeration_system.RegisterCourse">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="461dp">

        <Button
            android:id="@+id/registercourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/logout"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:text="@string/logout" />

        <ImageButton
            android:id="@+id/gotoprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            app:srcCompat="?android:attr/homeAsUpIndicator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="66dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/select_course"
                android:layout_weight="10.14" />

            <Spinner
                android:id="@+id/registercourse_spinner"
                android:layout_width="211dp"
                android:layout_height="42dp"
                android:layout_weight="66.67" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
